--- a/style.css
+++ b/style.css
@@ -11,11 +11,31 @@ h1 {
 
 .title {
   position: relative;
-
-  
 }
+
 .img {
   position: absolute;
   top: 1%;
   right: 1%;
+}
+
+.map {
+  position: relative;
+}
+
+.velibAvailable {
+  position: absolute;
+  top: 10%;
+  right: 5%;
+}
+
+.docksAvailable {
+  position: absolute;
+  top: 150%;
+  right: 5%;
+}
+
+.firstVisu {
+    float: left;
+    clear: none; 
 }
